Running with -XX:-UseParallelGC does not turn ParalleGC off

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 8u40, 8u45, 9
    • Component/s: hotspot
    • None
    • gc
    • b115

      Executing this command line with JDK 8u40 b03 (or JDK 7):

      $ java -XX:-UseParallelGC -version

      will start the JVM with the SerialGC. Using the same command line in JDK 8u40 b09 will start with ParallelGC:

      $ /java -XX:+PrintFlagsFinal -XX:-UseParallelGC -version | grep UseParallelGC
           bool UseParallelGC := true {product}
      java version "1.8.0_40-ea"
      Java(TM) SE Runtime Environment (build 1.8.0_40-ea-b09)
      Java HotSpot(TM) 64-Bit Server VM (build 25.40-b13, mixed mode)

      While I think it is a bit odd to only say which GC you don't want I'm guessing that this is probably not an intended change.

            Assignee:
            Per Liden (Inactive)
            Reporter:
            Bengt Rutisson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: