8068579: Running with -XX:-UseParallelGC does not turn ParalleGC off

Reviewed-by: jmasa, dfazunen, brutisso